force-app/main/default/objects/StudentsHomework__c/StudentsHomework__c.object-meta.xml
<CustomObject>
    <label>Student&apos;s Homework</label>
    <nameField>
        <label>Student&apos;s Homework Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Student&apos;s Homeworks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>