force-app/main/default/objects/StudentsHomework__c/fields/Homework__c.field-meta.xml
<CustomField>
    <fullName>Homework__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Homework</label>
    <referenceTo>Homework__c</referenceTo>
    <relationshipLabel>Student&apos;s Homeworks</relationshipLabel>
    <relationshipName>StudentHomeworks</relationshipName>
    <type>Lookup</type>
</CustomField>