force-app/main/default/objects/StudentsHomework__c/fields/Mark__c.field-meta.xml
<CustomField>
    <fullName>Mark__c</fullName>
    <label>Mark</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>