force-app/main/default/objects/StudentsHomework__c/fields/Student__c.field-meta.xml
<CustomField>
    <fullName>Student__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Student</label>
    <referenceTo>Student__c</referenceTo>
    <relationshipLabel>Student&apos;s Homeworks</relationshipLabel>
    <relationshipName>StudentHomeworks</relationshipName>
    <type>Lookup</type>
</CustomField>